# flora

./: .clang-format  .gitignore  .rgignore  CMakeLists.txt  CMakePresets.json  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
